--- a/devicesmanagement-app-client/src/App.css
+++ b/devicesmanagement-app-client/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.navheader{      
+  margin-top: 10px;      
+  color :black !important;      
+  background-color: #b3beca!important      
+}    
+  
+.PageHeading      
+{      
+  margin-top: 10px;      
+  margin-bottom: 10px;      
+  color :black !important;      
+} 
+
+.line {
+  margin-top: 20px;
+  margin-left: 20px;
+}
